# agent-passport-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  llms.txt  pyproject.toml
.github/workflows/: cross-impl-jcs.yml  publish.yml
conformance/composition-check/v0/: vectors.json
scripts/: generate_ts_fixtures.mjs
src/agent_passport/: __init__.py  _time.py  action_ref.py  agora.py  attribution.py  canonical.py  commerce.py  coordination.py  credential_request.py  crypto.py  data_settlement.py  data_source.py  delegation.py  did_interop.py  governance_block.py  identity_bridge.py  integration.py  intent.py  passport.py  policy.py  principal.py  training_attribution.py  values.py  vc_wrapper.py
src/agent_passport/integrations/: __init__.py  adk_adapter.py
src/agent_passport/receipt_core/: __init__.py  decision_ref.py  jcs.py  receipt.py  supporting_record.py
src/agent_passport/v2/: __init__.py  claim_evidence_types.py  claim_verifier.py  downstream_taint.py  human_escalation.py
src/agent_passport/v2/accountability/: __init__.py  bundle.py  construct.py  types.py  verify.py
src/agent_passport/v2/attribution_consent/: __init__.py  create.py  sign.py  types.py  verify.py
src/agent_passport/v2/attribution_primitive/: __init__.py  canonical.py  construct.py  merkle.py  project.py  residual.py  types.py  verify.py
src/agent_passport/v2/attribution_settlement/: __init__.py  aggregate.py  contributor_query.py  merkle.py  sign.py  types.py  verify.py
src/agent_passport/v2/attribution_weights/: __init__.py  compute_axis.py  data_axis.py  length.py  profile.py  recency.py  roles.py  types.py
src/agent_passport/v2/cognitive_attestation/: __init__.py  disputes.py  envelope.py  types.py  verify.py
src/agent_passport/v2/composition_check/: __init__.py  verify.py
src/agent_passport/v2/instruction_provenance/: __init__.py  canonicalize.py  envelope.py  types.py  verify.py
src/agent_passport/v2/mutual_auth/: __init__.py  certificate.py  handshake.py  trust_bundle.py  types.py
src/agent_passport/v2/provisional_statement/: __init__.py  create.py  promote.py  types.py  verify.py
src/agent_passport/v2/read_fidelity_receipt/: __init__.py  receipt.py  sampler.py  types.py
src/agent_passport/v2/word_handles/: __init__.py  codec.py  lexicon.py
tests/: _cross_language_attribution_build.mjs  _cross_language_attribution_verify.mjs  test_action_ref.py  test_adk_adapter.py  test_agora.py  test_attribution.py  test_attribution_consent.py  test_attribution_primitive.py  test_audit_day145.py  test_audit_fixes_2026_07_10.py  test_beneficiary_trace.py  test_canonical.py  test_canonical_bytes_vectors.py  test_commerce_currency_gate.py  test_commerce_integration.py  test_commerce_spend_accumulation.py  test_composition_check.py  test_coordination.py  test_credential_request.py  test_cross_language.py  test_crypto.py  test_data_settlement.py  test_data_source.py  test_delegation.py  test_delegation_hardening.py  test_did_interop.py  test_governance_block.py  test_human_escalation.py  test_identity_bridge.py  test_jcs_lone_surrogate.py  test_merkle_domain_separation.py  test_mutual_auth.py  test_passport.py  test_policy.py  test_principal.py  test_provisional_statement.py  test_receipt_core_v1.py  test_training_attribution.py  test_values.py  test_vc_wrapper.py
tests/cross_impl/: actionref-canonical-vectors.json  test_jcs_equivalence.py
tests/fixtures/: attribution_receipt_from_ts.json  owner_confirmation_from_ts.json  provisional_statement_from_ts.json
tests/v2/: test_attribution_settlement.py  test_attribution_settlement_cross_language.py  test_attribution_weights.py  test_attribution_weights_cross_language.py  test_claim_evidence_types.py  test_claim_verifier.py  test_downstream_taint.py  test_read_fidelity_receipt.py  test_settlement_merkle_domain_separation.py  test_word_handles.py
tests/v2/fixtures/build-c/: 01-single-axis-100-actions.json  02-multi-axis-1000-actions.json  03-residual-bucket.json  05-fragmented-one-action-each.json
tests/v2/fixtures/evidentiary-type-safety/: fixtures.json
tests/v2/fixtures/read-fidelity-receipt/: read-fidelity-receipt-v0.1-vectors.json
tests/v2/fixtures/wave1/: META.json  _generate.mjs
tests/v2/fixtures/wave1/cognitive-attestation/: canonical-bytes.fixture.json  digest.fixture.json  single-signed.fixture.json  two-signers.fixture.json
tests/v2/fixtures/wave1/instruction-provenance/: basic.fixture.json  case-insensitive.fixture.json  recompute-and-action-bound.fixture.json
tests/v2/wave1/: test_accountability_action.py  test_accountability_authority_boundary.py  test_accountability_bundle.py  test_accountability_contestability.py  test_accountability_custody.py  test_cognitive_attestation_disputes.py  test_cognitive_attestation_envelope.py  test_cognitive_attestation_verify.py  test_instruction_provenance_canonicalize.py  test_instruction_provenance_envelope.py  test_instruction_provenance_verify.py
