[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-passport-system"
version = "2.0.0b0"
description = "Python SDK for the Agent Passport System — identity, delegation, governance, data source registration, training attribution, per-period attribution settlement (Build C). Cross-language parity with agent-passport-system npm v2.0.0 — clean protocol-only surface after the v2 separation refactor. Product intelligence lives in the private gateway."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Tymofii Pidlisnyi", email = "signal@aeoess.com" }
]
keywords = ["agent", "identity", "ed25519", "delegation", "mcp", "ai-agents", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pynacl>=1.5.0",
    "base58>=2.1.0",
]

[project.urls]
Homepage = "https://aeoess.com"
Repository = "https://github.com/aeoess/agent-passport-python"
Documentation = "https://aeoess.com/llms-full.txt"
"npm SDK" = "https://www.npmjs.com/package/agent-passport-system"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_passport"]

[tool.pytest.ini_options]
testpaths = ["tests"]
