[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-passport-system"
version = "2.4.0"
description = "Python SDK for the Agent Passport System. Identity, delegation, governance, data source registration, training attribution, per-period attribution settlement, mutual authentication, evidentiary type safety, Wave 1 accountability primitives (action, authority-boundary, custody, contestability, bundle), Cognitive Attestation, Instruction Provenance Receipts. Cross-language parity with agent-passport-system npm v2.6.0 verified by byte-identical canonical JSON fixtures."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tymofii Pidlisnyi", email = "signal@aeoess.com" }
]
keywords = ["agent", "identity", "ed25519", "delegation", "mcp", "ai-agents", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pynacl>=1.5.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
# Test extra. rfc8785 is needed for the JCS byte-parity tests in
# tests/cross_impl; without it those tests skip instead of running.
test = [
    "pytest>=7.0",
    "rfc8785>=0.1.4",
]

[project.urls]
Homepage = "https://aeoess.com"
Repository = "https://github.com/aeoess/agent-passport-python"
Documentation = "https://aeoess.com/llms-full.txt"
"npm SDK" = "https://www.npmjs.com/package/agent-passport-system"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_passport"]

# Explicit sdist contents. Hatch's default sdist sweep would otherwise pull
# in tests/, papers/, drafts/, working-group dossiers, and other repo-local
# material that has no business shipping to PyPI consumers. This is the
# hatch-native equivalent of a setuptools MANIFEST.in. Explicit beats
# implicit at audit time.
[tool.hatch.build.targets.sdist]
include = [
  "src/agent_passport/**",
  "README.md",
  "LICENSE",
  "NOTICE",
  "pyproject.toml",
  "CHANGELOG.md",
]
exclude = [
  "tests/**",
  "papers/**",
  "drafts/**",
  "docs/drafts/**",
  ".github/**",
  "*.log",
  "*.tgz",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
